Remove word wrapping prevention from table cells for layout flexibility

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -128,7 +128,7 @@ th, td {
   // text-align: left;
   padding: 5px 10px;
   border: none;
-  white-space: nowrap; /* Prevents word wrapping */
+  // white-space: nowrap; /* Prevents word wrapping */
 }
 
 dt {
